[project]
name = "qfcpublicregisterscraper"
version = "0.1.0"
description = ""
authors = [
    {name = "Rashicom",email = "rashid.kp484@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "selenium (>=4.34.0,<5.0.0)",
    "schedule (>=1.2.2,<2.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
